2009-06-03  Benjamin Drung  <benjamin.drung@gmail.com>

	* [r72] configure.ac: Check if a compatible version of libdvdread is used
	        (libdvdread must have a DVDFileStat function).

2009-06-02  Benjamin Drung  <benjamin.drung@gmail.com>

	* [r71] po/dvdbackup.pot, po/*.po: Updated.

	* [r71] po/LINGUAS: Added German (de) translation.

	* [r70] po/de.po: Added; thanks to Chris Leick <c.leick@vollbio.de>

	* [r69] src/dvdbackup.c, src/main.c: Fix typos and improve wording; thanks
	        to Chris Leick <c.leick@vollbio.de>

2009-03-31  Benjamin Drung  <benjamin.drung@gmail.com>

	* [r68] src/dvdbackup.c: Fix typos and improve wording.

	* [r67] src/dvdbackup.c (DVDCopyBlocks): Fix offset bug; thanks to Lenard
	        Spencer

2009-03-02  Benjamin Drung  <benjamin.drung@gmail.com>

	* [r65] configure.ac: Updated version string to 0.4+svn

	* [r63] configure.ac, NEWS, po/dvdbackup.pot, po/*.po: Release version 0.4

	* [r62] debian/: Removed. The Debian package is now maintained at
	  http://alioth.debian.org/

	* [r61] configure.ac: enable extra warnings for gcc if they are not
	  already enabled

2009-02-20  Benjamin Drung  <benjamin.drung@gmail.com>

	* [r60] po/es.po, po/fr.po, po/it.po, po/gl.po, po/LINGUAS, po/nb.po,
	  po/ru.po: Added translations from Launchpad.
	* [r60] po/dvdbackup.pot: Updated.

2009-02-19  Benjamin Drung  <benjamin.drung@gmail.com>

	* [r56] configure.ac:
	  - Updated gettext to version 0.17
	  - Added more header checks
	* [r56] Removed all files which are copied by gettext.

	* [r55] INSTALL: Updated to newest version from autoconf.

	* [r55] src/dvdbackup.c, src/dvdbackup.h, src/main.c: Updated year in
	  copyright.

	* [r54] src/main.c: Added include <locale.h> for LC_ALL constant.

	* [r54] ChangeLog, NEWS: Updated.

2008-11-19  Benjamin Drung  <benjamin.drung@gmail.com>

	* [r52] src/main.c: Removed compile warnings.

2008-05-01  Benjamin Drung  <benjamin.drung@gmail.com>
